--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,16 @@
 spring.application.name=vetconnect-plattform
 
 # Spring Datasource Configuration
-spring.datasource.url=jdbc:mysql://vetconnectv1.mysql.database.azure.com/vetconnectv1
-spring.datasource.username=codeconnect
-spring.datasource.password=cd56596d1a905#@...
+#spring.datasource.url=jdbc:mysql://vetconnectv1.mysql.database.azure.com/vetconnectv1
+spring.datasource.url=jdbc:mysql://localhost:3306/vetconnectv1
+#spring.datasource.username=codeconnect
+spring.datasource.username=root
+
+##spring.datasource.password=cd56596d1a905#@...
+spring.datasource.password=12345678
+
 server.port=8080
+spring.profiles.active=local
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
